.sisyphus/evidence/task-5-provider-import.txt
  File "<string>", line 1
    import s3_storage_provider; print(\"Provider import OK\")
                                       ^
SyntaxError: unexpected character after line continuation character
command terminated with exit code 1
